--- a/july2015/problem19.tex
+++ b/july2015/problem19.tex
@@ -14,9 +14,26 @@ This amazing position was played by Adolf Anderssen one of the most tactical pla
 
 \fenboard{r1b2r2/pp4k1/1bpp1q1p/4NppQ/2B2N2/2P5/P5PP/R1B1R2K w - - 0 1}
 
+
 \begin{center}
 \showboard
 \end{center}
+
+\textbf{Solution}
+
+Anderssen played the strong move \mainline{1.Ng4!} (the alternative \variation{1.Nd7!} is also strong) \mainline{1...f5xg4 2.Re7+!}.
+
+\begin{center}
+\showboard
+\end{center}
+ 
+\mainline{2...Qxe7 3.Qg6+ Kh8 4.Qh6+ Qh7 5.Ng6#}.
+
+
+\begin{center}
+\showboard
+\end{center}
+
 
 \end{document}
 
