--- a/2015/problems.tex
+++ b/2015/problems.tex
@@ -6,6 +6,11 @@
  
 \begin{document}
 
+\section{Tactical Position}
+
+\subsection{Position 1}
+
+
 
 This amazing position was played by Adolf Anderssen one of the most tactical player of all time. White to play, can you find the winning sequence?
 
